# tee-otc

./: .dockerignore  .gitignore  AGENTS.md  CONCURRENT_REQUEST_ISSUE.md  Cargo.toml  DEPLOYMENT.md  Dockerfile.otc  Dockerfile.rfq  MM_COMPETITION_SUMMARY.md  MM_LIQUIDITY_PLANNER_SPEC.md  Makefile  README.md  RUN_ALL_TESTS_README.md  SAURON_DETECTION_SPEC.md  TEST_REPORT.md  bitcoin-entrypoint.sh  compose.mm.yml  compose.phala.yml  justfile  prod_whitelisted_market_makers.json  test_mm_competition.sh
.cargo/: config.toml
.cursor/commands/: ftests.md
.wake/extension/: local-local-chain-e8179267-7f26-48ba-906c-afe4904068f0.json
crates/blockchain-utils/: Cargo.toml
crates/blockchain-utils/src/: alloy_ext.rs  bitcoin_wallet.rs  fee_calc.rs  lib.rs  receive_auth_helper.rs  transfer_auth_helper.rs
crates/chainalysis-address-screener/: Cargo.toml
crates/chainalysis-address-screener/src/: lib.rs
crates/coinbase-exchange-client/: Cargo.toml
crates/coinbase-exchange-client/src/: lib.rs
crates/devnet/: Cargo.toml
crates/devnet/src/: bitcoin_devnet.rs  coinbase_mock_server.rs  evm_devnet.rs  lib.rs
crates/devnet/src/token_indexerd/: mod.rs
crates/eip3009-erc20-contract/: Cargo.toml
crates/eip7702-delegator-contract/: Cargo.toml
crates/evm-token-indexer-client/: Cargo.toml
crates/evm-token-indexer-client/src/: lib.rs
crates/mm-websocket-server/: Cargo.toml
crates/mm-websocket-server/src/: auth.rs  connection.rs  handler.rs  lib.rs
crates/otc-auth/: Cargo.toml
crates/otc-auth/src/: api_keys.rs  lib.rs
crates/otc-chains/: Cargo.toml
crates/otc-chains/src/: bitcoin.rs  error.rs  ethereum.rs  evm.rs  lib.rs  registry.rs  rpc_metrics_layer.rs  traits.rs
crates/otc-mm-protocol/src/: messages.rs
crates/otc-models/: Cargo.toml
crates/otc-models/src/: api_key.rs  chain.rs  constants.rs  fees.rs  lib.rs  quote.rs  serde_utils.rs  status.rs  swap.rs  swap_transitions.rs  wallet.rs
crates/otc-models/tests/: datetime_precision_test.rs
crates/otc-protocols/: Cargo.toml
crates/otc-protocols/src/: lib.rs
crates/otc-protocols/src/mm/: README.md  errors.rs  messages.rs  version.rs
crates/otc-protocols/src/rfq/: mod.rs
crates/utc/: Cargo.toml
crates/utc/src/: lib.rs
deploy/railway/sauron/: RATHOLE_TOPOLOGY.md  README.md  start-rathole-broker.sh
etc/: Dockerfile.mm  Dockerfile.otc  Dockerfile.rathole-broker  Dockerfile.rfq  Dockerfile.sauron  compose.devnet.yml  compose.electrs.yml  compose.iozone.yml  compose.mm.yml  compose.override.yml  compose.phala.yml  compose.replica.yml  compose.reth-bench.yml  compose.server-bench.yml  compose.test-db.yml  override.yml
etc/config/market-maker/: grafana-config.yml
etc/configs/: mm-grafana-dashboard-provider.yml  mm-grafana-dashboard.json  mm-grafana-datasource-devnet-base.yml  mm-grafana-datasource-devnet-eth.yml  mm-grafana-datasource.yml  mm-loki-config.yml  mm-prometheus-config.yml
evm-token-indexer/: ponder.schema.ts
evm-token-indexer/src/: index.ts
evm-token-indexer/src/api/: index.ts
integration-tests/: Cargo.toml
integration-tests/src/: admin_api_test.rs  auto_rebalance_test.rs  base_swap_rejection_test.rs  bitcoin_wallet_test.rs  concurrent_rebalance_test.rs  connection_reset_test.rs  deposit_key_vault_test.rs  drain_to_coinbase_test.rs  evm_wallet_test.rs  external_detection_ingest_test.rs  fee_settlement_test.rs  insufficient_deposit_refund_test.rs  lib.rs  liquidity_endpoint_test.rs  liquidity_locking_test.rs  market_maker_batch_settlement_test.rs  market_maker_otc_auth_test.rs  metrics_export_test.rs  planner_drain_plan_test.rs  quote_modes_swap_test.rs  quote_storage_test.rs  refund_test.rs  rfq_fee_override_test.rs  rfq_flow_test.rs  rfq_reconnection_test.rs  simple_swap_test.rs  taproot_address_test.rs  timeout_triggers_cancel_test.rs  tx_replacement_test.rs
integration-tests/src/utils/: mod.rs  test_proxy.rs
