[workspace]
resolver = "2"
members = [
    "bin/otc-server",
    "crates/otc-models",
    "crates/otc-chains",
    "crates/otc-mm-protocol",
    "bin/rfq-server",
    "bin/mm-server"
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
repository = "https://github.com/riftresearch/tee-otc"

[workspace.dependencies]
# Internal dependencies
otc-models = { path = "crates/otc-models" }
otc-chains = { path = "crates/otc-chains" }
otc-mm-protocol = { path = "crates/otc-mm-protocol" }

tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
snafu = { version = "0.8", features = ["std", "backtrace"] }
axum = { version = "0.7", features = ["ws"] }
clap = { version = "4.5", features = ["derive", "env"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "migrate"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

alloy = { version = "1.0", features = ["full"] }
config = { version = "0.14", features = ["toml"] }
zeroize = { version = "1.8", features = ["derive"] }
secrecy = { version = "0.10", features = ["serde"] }
hex = "0.4"
getrandom = "0.2"
toml = "0.8"
bitcoin = "0.32"
bitcoincore-rpc = "0.19"
tokio-tungstenite = "0.21"
dashmap = "6.1"
jsonwebtoken = "9.3"
validator = "0.18"
sha2 = "0.10"
rand = "0.8"
tower = "0.4"
tower-http = "0.5"
parking_lot = "0.12"
crossbeam = "0.8"
futures = "0.3"


[profile.dev.package.sqlx-macros]
opt-level = 3