[workspace]
resolver = "2"
members = [
    "bin/*",
    "crates/*",
    "integration-tests"
]

[workspace.package]
edition = "2021"
version = "0.8.2"
license = "MIT OR Apache-2.0"
repository = "https://github.com/riftresearch/tee-otc"

[workspace.dependencies]
# Internal dependencies
otc-models = { path = "crates/otc-models" }
otc-chains = { path = "crates/otc-chains" }
otc-protocols = { path = "crates/otc-protocols" }
rfq-server = {path = "bin/rfq-server"}
blockchain-utils = { path = "crates/blockchain-utils" }
devnet = { path = "crates/devnet" }
evm-token-indexer-client = { path = "crates/evm-token-indexer-client" }
otc-server = {path = "bin/otc-server"}
market-maker = {path = "bin/market-maker"}
bitcoin-wallet-utils = {path = "bin/bitcoin-wallet-utils"}
eip7702-delegator-contract = {path = "crates/eip7702-delegator-contract"}
eip3009-erc20-contract = {path = "crates/eip3009-erc20-contract"}
utc = {path = "crates/utc"}
otc-auth = {path = "crates/otc-auth"}
chainalysis-address-screener = { path = "crates/chainalysis-address-screener" }

# All of the following dependences (before the empty line) are implicitly linked to the same version, if one of them is updated they must all be updated simultaneously 
bitcoin = { version = "0.32.0", default-features = false, features = ["serde", "base64", "secp-recovery"] }
bitcoincore-rpc-async = { git = "https://github.com/riftresearch/rust-bitcoincore-rpc-async", rev = "c50734a50f2af2f8a9be3f03b98832dd04e788b1" }
corepc-node = { version = "0.8.0", features = ["29_0", "download"] }
electrsd = { git = "https://github.com/RCasatta/electrsd", rev = "bdc97e879bad82e13e69c74d898271db12224f44", features = ["corepc-node_29_0", "esplora_a33e97e1", "legacy"] }
esplora-client = {git = "https://github.com/riftresearch/rust-esplora-client" , rev = "4009ba4be0d73ed7126e91ef8d39e8f560190053", features = ["async", "tokio"]}

alloy = { version = "1.0.23", features = ["full", "node-bindings", "json-rpc"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
snafu = { version = "0.8", features = ["std"] }
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors"] }
clap = { version = "4.5", features = ["derive", "env"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
zeroize = { version = "1.8", features = ["derive"] }
secrecy = { version = "0.10", features = ["serde"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"]}
getrandom = "0.2"
dashmap = "6.1"
futures-util = "0.3"
url = "2.5"
argon2 = "0.5"
rand = "0.8"
ctor = "0.2"
rustls = { version = "0.23", default-features = true, features = ["ring"]}
reqwest = "0.12.22"
dirs = "6.0.0"
tempfile = "3.20.0"
fs2 = "0.4"
backoff = { version = "0.4.0", features=["tokio"] }
sha2 = "0.10"
hkdf = "0.12"
bip39 = "2.1.0"
async-trait = "0.1"
bitcoin-coin-selection =  { version = "0.7.0", features = ["rand"]}
sqlx = { version = "0.8",  features = ["runtime-tokio", "tls-native-tls", "postgres", "uuid", "chrono", "migrate"] }
bdk_wallet = { version = "2.0.0", features=["rusqlite"] }
bdk_esplora = { version = "0.22.0", features=["tokio","async"]}
metrics = "0.23.1"
metrics-exporter-prometheus = "0.15.3"
hmac = "0.12.1"
base64 = "0.22.1"
mock_instant = "0.6.0"
dstack-sdk = "0.1.0"
libc = "0.2.176"
humantime = "2.1"
anyhow = "1.0"
crossterm = "0.27"
dotenvy = "0.15"
ratatui = "0.28"
eyre = "0.6.12"

[profile.dev.package.sqlx-macros]
opt-level = 3

[patch.crates-io]
corepc-node = { git = "https://github.com/alpinevm/corepc", rev = "2b21b2bfeb4b4c8bc71fccba87d86054a648f242" }
sqlx-sqlite = { path = "sqlx-sqlite-shim" }
esplora-client = {git = "https://github.com/riftresearch/rust-esplora-client" , rev = "4009ba4be0d73ed7126e91ef8d39e8f560190053"}
