[package]
name = "integration-tests"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "integration_tests"
path = "src/lib.rs"

[dependencies]
tokio = {workspace = true}
ctor = {workspace = true}
tracing-subscriber = { workspace = true }
otc-server = {workspace = true, features = ["integration-test"] }
rfq-server = {workspace= true, features = ["integration-test"]}
market-maker = {workspace = true, features = []}
sqlx = {workspace = true}
reqwest = {workspace = true}
serde_json = {workspace = true}
devnet = {workspace = true}
alloy = {workspace = true}
tracing = {workspace = true}
evm-token-indexer-client = {workspace = true}
bitcoincore-rpc-async = {workspace = true}
bitcoin = {workspace = true}
blockchain-utils = {workspace = true}
otc-models = {workspace = true}
uuid = {workspace= true}
serde = {workspace = true}
chrono = {workspace=true}
otc-protocols = {workspace = true}
otc-chains = {workspace=true}
mock_instant = {workspace=true}
# Enable mock-time so integration tests can advance utc::now()
utc = {workspace=true, features=["mock-time"]}
eip3009-erc20-contract = {workspace = true}
metrics = {workspace = true}
socket2 = {workspace = true}
snafu = {workspace = true}
