[package]
name = "blockchain-utils"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
alloy = {workspace = true}
bitcoin = {workspace = true}
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
backoff = { workspace = true }
snafu = { workspace = true }
bitcoin-coin-selection = {workspace = true}
bip39 = {workspace = true}
otc-models = {workspace=true}
eip3009-erc20-contract = {workspace=true}
eip7702-delegator-contract = {workspace=true}