[package]
name = "otc-auth"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
otc-models = { workspace = true }
snafu = {workspace=true}
serde = {workspace=true}
serde_json = {workspace=true}
uuid = {workspace = true}
tokio = {workspace = true}
tracing = {workspace = true}

[dev-dependencies]
tempfile = {workspace=true} 

[features]
integration-test = []