[package]
name = "otc-models"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
alloy = { workspace = true }
zeroize = { workspace = true }
secrecy = { workspace = true }
rand = "0.8"
hex = { workspace = true }
sha2 = "0.10"

[dev-dependencies]
serde_json = { workspace = true }